# api-lang-arena

./: .env.example  .gitignore  README.md  api-lang-arena.sln  docker-compose.yml
benchmark-client/: README.md  benchmark.py  benchmark_dotnet_post.py  benchmark_post.py  requirements.txt  run_compare.sh
db/: seed.sh  seed.sql
dot-net/: README.md
dot-net/BillsApi/: .dockerignore  BillsApi.csproj  Dockerfile  Program.cs
dot-net/BillsApi/Application/Abstractions/: ICommand.cs  ICommandHandler.cs  IQuery.cs  IQueryHandler.cs
dot-net/BillsApi/Domain/Bills/: Bill.cs  Money.cs  (+2 more)
dot-net/BillsApi/Properties/: launchSettings.json
go/: README.md
go/BillsApi/: .dockerignore  Dockerfile  go.mod  go.sum
java/: README.md
java/BillsApi/: Dockerfile  build.gradle.kts  settings.gradle.kts
kotlin/BillsApi/: build.gradle.kts  settings.gradle.kts
node-ts/: README.md
node-ts/BillsApi/: Dockerfile  package-lock.json  package.json  tsconfig.json
node-ts/BillsApi/src/: config.ts  main.ts
python/: README.md
python/BillsApi/: .dockerignore  Dockerfile  requirements.txt
python/BillsApi/app/: main.py
rust/: README.md
rust/BillsApi/: Cargo.toml  Dockerfile
rust/BillsApi/src/: app_error.rs  config.rs  main.rs
rust/BillsApi/src/application/bills/: create.rs  get.rs
rust/BillsApi/src/domain/: bills.rs
rust/BillsApi/src/infrastructure/messaging/: rabbitmq_publisher.rs
rust/BillsApi/src/infrastructure/persistence/: repository.rs
rust/BillsApi/src/infrastructure/persistence/entities/: bill.rs  bill_line.rs
rust/BillsApi/src/presentation/: dto.rs  handlers.rs
(+134 files in other folders)
